<resources>
    <string name="app_name">Jumiah</string>
    <string name="search_hint">Search on Jumiah</string>
    <string name="flash_sales">Flash Sales</string>
    <string name="time_left">TIME LEFT: 01h : 04m : 56s</string>
    <string name="see_all">See All &gt;</string>
    <string name="sponsored_products">Sponsored Products</string>

    <!-- Placeholders for design and dynamic content -->
    <string name="category_placeholder">Category</string>
    <string name="discount_placeholder">-50%</string>
    <string name="discount_39_placeholder">-39%</string>
    <string name="product_name_placeholder">Product name</string>
    <string name="price_placeholder">GH₵ 0</string>
    <string name="items_left_placeholder">28 items left</string>
    <string name="old_price_placeholder">GH₵ 113</string>
</resources>